modified:   README.md 	modified:   source/backup_schema.sh 	modified:   source/pre_backup.sh 	modified:   source/source.cnf 	deleted:    source/vsn.sh 	new file:   target/SQL/REQUIRED_PRIVS.sql 	modified:   target/SQL/TABLES_NOT_PARTITONED.sql 	modified:   target/SQL/TABLES_PARTITONED.sql 	modified:   target/SQL/TABLES_PARTITONED_WITH_SUBPARTITIONS.sql 	modified:   target/pre_restore.sh 	modified:   target/restore_schema.sh 	modified:   target/target.cnf 	deleted:    target/vsn.sh 	new file:   vsn.sh

--- a/source/source.cnf
+++ b/source/source.cnf
@@ -9,8 +9,8 @@
 
 # The group name must be [source]
 [source]
- user = mariabackup
- password = pw1
+# user = mariabackup
+# password = pw1
 # host = localhost
 # port = 3306
 
